<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:format12Hour="HH:mm:ss" />

        <Button
            android:id="@+id/testHashMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_hashmap_objects" />

        <Button
            android:id="@+id/testSparseArrayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_sparse_array_objects" />

        <Button
            android:id="@+id/defaultListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_random_images" />

        <Button
            android:id="@+id/modifiedListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modified_random_images" />

        <Button
            android:id="@+id/workerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_worker" />

        <Button
            android:id="@+id/gsonJsonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gson_test_json_path" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>